# IonSolver

./: .gitignore  Cargo.toml  FILE_LAYOUT.txt  LICENSE.md  LatticeBoltzmannDemo.java  README.md  Simplified LBM.c  b-field_spin.ion  test.ions
src/: bfield_precompute.rs  debug.rs  efield_precompute.rs  file.rs  graphics.rs  graphics_kernels.cl  info.rs  kernels.cl  lbm.rs  main.rs  multi_node.rs  opencl.rs  parse.rs  precompute.rs  setup.rs  sim_kernels.cl  solver.rs  source.rs  ui.rs  units.rs  vector2.rs
src/kernels/: graphics_kernels.cl  sim_kernels.cl
src/lbm/: domain.rs  graphics.rs  mod.rs  multi_node.rs  precompute.rs  types.rs  units.rs
