[package]
name = "IonSolver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { version = "1.3.3", optional = true } # used for multi-node synchronization
eframe = { version = "0.22.0", optional = true } # used for gui rendering
egui = { version = "0.22.0", optional = true }   # used for gui rendering
image = "0.24.7"
mpi = { version = "0.8.0", features = ["user-operations", "derive"], optional = true } # used for multi-node execution
ocl = "0.19.7"
ocl-macros = "0.0.4"
rayon = "1.8.0"
serde = { version = "1.0.203", features = ["derive"], optional = true } # used for multi-node synchronization


[features]
default = ["multi-node"] # for debugging only
gui = ["dep:eframe", "dep:egui"]
multi-node = ["dep:bincode", "dep:mpi", "dep:serde"]
